# KURS4

./: pyproject.toml  requirements.txt
src/: abstract_api.py  abstract_manager.py  data_manager.py  filters.py  hh_api.py  job.py  main.py
