[tool.poetry]
name = "k4"
version = "0.1.0"
description = ""
authors = ["Tatiyana Galitskaya <tatianagalitskaya3@gmail>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
colorama = "^0.4.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
